# Periodcare

./: Nutrients.pro  Period.pro  PeriodcareLogin.pro  PeriodcareLogin.pro.autosave  Periodtrack.pro  README.md  Resource.qrc  SanitaryCare.pro  avatar.qrc  avatarutils.h  bgcolor.xml  calendar.cpp  calendar.h  changepwd.cpp  changepwd.h  changepwd.ui  dashboard.cpp  dashboard.h  dashboard.ui  editprofilewindow.cpp  editprofilewindow.h  editprofilewindow.ui  forgotpwd.cpp  forgotpwd.h  forgotpwd.ui  form.cpp  form.h  form.ui  form.ui.bak  form.ui.bak.bak  globals.cpp  globals.h  homepage.cpp  homepage.h  homepage.ui  imgg.qrc  login.cpp  login.h  login.ui  loginpage.cpp  (+43 more)
loginportion/: PeriodcareLogin.pro  dashboard.ui  main.cpp  userinfo.db
moodmanagement/: moodmanagement.pro  moodmanagement.ui  moodsecond.cpp  moodsecond.h  moodsecond.ui
yoga/yoga/: CMakeLists.txt  main.cpp  moodmanagement.cpp  moodmanagement.ui  yoga.cpp  yoga.h  yoga.ui
